# faze

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  justfile  release.toml
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml  release.yml
faze/: Cargo.toml
faze-cli/: Cargo.toml
faze-cli/examples/: send_traces.rs
faze-cli/src/: cli.rs  main.rs
faze-cli/src/commands/: clean.rs  info.rs  logs.rs  mod.rs  serve.rs  traces.rs  tui.rs
faze-cli/tests/: integration_test.rs
faze-collector/: Cargo.toml  build.rs
faze-collector/proto/google/rpc/: status.proto
faze-collector/proto/opentelemetry/proto/trace/v1/: trace.proto
faze-collector/src/: http.rs  lib.rs
faze-collector/src/convert/: logs.rs  metrics.rs  mod.rs  traces.rs
faze-collector/src/grpc/: logs.rs  metrics.rs  mod.rs  traces.rs
faze-collector/src/http/: body.rs  json.rs  mod.rs
faze-server/: Cargo.toml
faze-server/src/: lib.rs  routes.rs  server.rs  ui.rs
faze-server/src/routes/: dto.rs  error.rs  handlers.rs  mod.rs
faze-tui/: Cargo.toml
faze-tui/src/: lib.rs
faze/src/: lib.rs
faze/src/models/: attributes.rs  db_enum.rs  log.rs  metric.rs  mod.rs  resource.rs  scope.rs  span.rs  trace.rs
faze/src/storage/: convert.rs  db_path.rs  logs.rs  metrics.rs  mod.rs  rows.rs  schema.rs  spans.rs  stats.rs
glint-cli/src/: main.rs
glint-server/: Cargo.toml
glint-server/src/: lib.rs  routes.rs  server.rs  ui.rs
ui/: TODO.md  index.html  package.json  vite.config.ts
ui/src/: index.css  main.tsx
ui/src/hooks/: use-auto-refresh.ts
(+93 files in other folders)
