[package]
name = "faze-collector"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
faze.workspace = true
tokio.workspace = true
tonic.workspace = true
tonic-prost.workspace = true
prost.workspace = true
tracing.workspace = true
axum.workspace = true

[dev-dependencies]
tower.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true

[lints]
workspace = true
